--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="27dp"
         android:ems="10"
         android:inputType="numberPassword"
+        android:text="Password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.948"
@@ -23,14 +24,16 @@
         android:id="@+id/button"
         android:layout_width="76dp"
         android:layout_height="26dp"
+        android:layout_marginBottom="16dp"
         android:background="#BBD246"
         android:onClick="OnClick"
         android:text="go"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.956" />
 
     <ImageView
         android:id="@+id/imageView"
