--- a/app/src/main/res/layout/meal.xml
+++ b/app/src/main/res/layout/meal.xml
@@ -1,46 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:orientation="horizontal"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+
+    android:layout_height="match_parent"
+
+    >
+
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="157dp"
-        android:layout_height="198dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.133"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.099"
-        app:srcCompat="@drawable/fitmeal" />
+
+        android:id="@+id/ivMeal"
+
+        android:layout_width="133dp"
+
+        android:layout_height="108dp"
+
+        />
+
+    <LinearLayout
+
+        android:layout_width="158dp"
+
+        android:layout_height="108dp"
+
+        android:orientation="vertical"
+
+        >
+
+
+        <TextView
+
+            android:id="@+id/MealName"
+
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+
+            android:layout_marginLeft="10dp"
+
+            android:layout_marginTop="5dp"
+
+            android:text="title"
+
+            android:textColor="#4CAF50"
+
+            android:textSize="20dp"
+
+            />
+
+        <TextView
+
+            android:id="@+id/Mealid"
+
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+
+            android:layout_marginLeft="10dp"
+
+            android:layout_marginTop="5dp"
+
+            android:text="subtitle"
+
+            android:textColor="#000000"
+
+            android:textSize="20dp"
+
+            />
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/MealName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="96dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/calories"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.248" />
 
-    <TextView
         android:id="@+id/calories"
-        android:layout_width="wrap_content"
+
+        android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
-        android:layout_marginEnd="96dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.325" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+        android:layout_marginTop="20dp"
+
+        android:layout_marginRight="20dp"
+
+        android:gravity="right"
+
+        android:text="500"
+
+        android:textColor="#4CAF50"
+
+        android:textSize="30sp"
+
+
+        />
+
+
+</LinearLayout>
